# retrodepth

./: README.md  build.bat
retrodepth/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
retrodepth/cmake/: sync_configs.cmake
retrodepth/src/: capture.cpp  capture.h  d3d11_renderer.cpp  d3d11_renderer.h  diagnostics_recorder.cpp  diagnostics_recorder.h  dynamic_router.cpp  dynamic_router.h  editor_info_window.cpp  editor_info_window.h  game_config.cpp  game_config.h  launcher_window.cpp  launcher_window.h  layer_editor.cpp  layer_editor.h  layer_processor.cpp  layer_processor.h  main.cpp  palette_control.cpp  palette_control.h  preview_window.cpp  preview_window.h  settings_io.cpp  settings_io.h  shmem_reader.cpp  shmem_reader.h  spectator_window.cpp  spectator_window.h  system_features.h  xr_app.cpp  xr_app.h
scripts/src/: emu.lua
src/devices/video/: 315_5124.cpp  315_5313.cpp  gb_lcd.cpp  gb_lcd.h  ppu2c0x.cpp  snes_ppu.cpp
src/emu/: machine.cpp  retrodepth.cpp  retrodepth.h
src/mame/: mame.lst
src/mame/capcom/: cps1.cpp  cps1_v.cpp  cps2.cpp
src/mame/konami/: simpsons.cpp  tmnt.cpp
src/mame/neogeo/: neogeo.cpp  neogeo_spr.cpp  neogeo_spr.h  neogeo_v.cpp
src/mame/nintendo/: gb.cpp  nes.cpp  snes.cpp  snes_m.cpp
src/mame/sega/: mdconsole.cpp  megadriv.cpp  sms.cpp  sms_m.cpp
